--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,49 @@ body {
     margin: 0;
     padding: 0;
     background-color: #222;
-    overflow-x: hidden;
+    overflow: hidden;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+.bg-main {
+    position: absolute;
+    background-color: #222;
+}
+
+.bg {
+    overflow: hidden;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+.fg {
+    overflow-y: scroll;
+    overflow-x: scroll;
+    height: 100vh;
+    width: 100vw;
 }
 
 .main-card {
     position: relative;
     perspective: 800px;
     width: 100vw;
-    height: 100vh;
+    height: 110vh;
     overflow: hidden;
-    background-color: #222;
+}
+
+.page {
+    position: relative;
+    padding: 1rem;
 }
 
 .containers {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-47%, -50%);
     pointer-events: none;
     width: 90vw;
     height: 30vh;
@@ -54,14 +80,91 @@ body {
 
 .text {
     font-family: 'Fira Sans';
-    font-size: 16px;
-    top: 5%;
-    left: 5%;
     color: #fff;
+}
+
+.text-large {
+    font-size: 16px;
 }
 
 .main-content {
     background-color: #fff;
+}
+
+.blue {
+    position: absolute;
+    width: 90vw;
+    bottom: -1%;
+    left: 10%;
+    animation: p2 98s linear infinite;
+}
+
+.orange {
+    position: absolute;
+    width: 120vw;
+    left: -90%;
+    animation: p1 18s linear infinite;
+}
+
+.purple {
+    position: absolute;
+    width: 130vw;
+    bottom: 10%;
+    right: -80%;
+    animation: p3 19s linear infinite;
+}
+
+.passage {
+    display: flex;
+    flex-direction: column;
+    margin: 9rem 0 9rem 0;
+    align-items: center;
+}
+
+.picture {
+    width: 80vw;
+}
+
+@keyframes p1 {
+    0% {
+        transform: translate(-1%, -1%);
+    }
+    40% {
+        transform: translate(1%, 1%);
+    }
+    100% {
+        transform: translate(-1%, -1%);
+    }
+}
+
+@keyframes p2 {
+    0% {
+        transform: translate(-12%, -8%);
+    }
+    25% {
+        transform: translate(-12%, 3%);
+    }
+    50% {
+        transform: translate(15%, -3%);
+    }
+    75% {
+        transform: translate(12%, -8%);
+    }
+    100% {
+        transform: translate(-12%, -8%);
+    }
+}
+
+@keyframes p3 {
+    0% {
+        transform: translate(-1%, 3%);
+    }
+    73% {
+        transform: translate(1%, -2%);
+    }
+    100% {
+        transform: translate(-1%, 3%);
+    }
 }
 
 @media screen and (min-width: 800px) {
@@ -69,7 +172,7 @@ body {
         width: 70vw;
         height: 90vh;
     }
-    .text {
+    .text-large {
         font-size: 32px;
     }
     .background-main {
@@ -79,5 +182,24 @@ body {
         border-radius: 20px;
         width: 40px;
         height: 40px;
+    }
+    .page {
+        padding: 4rem 6rem 4rem 6rem;
+    }
+    .blue {
+        bottom: -40%;
+    }
+    .orange {
+        top: -70%;
+        left: -60%;
+        width: 90vw;
+    }
+    .purple {
+        top: -90%;
+        right: -80%;
+        width: 90vw;
+    }
+    .picture {
+        width: 60vw;
     }
 }
